# pfaa-engine

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  Dockerfile.frequi  LICENSE  README.md  SECURITY.md  biome.json  docker-compose.yml  jmem_mcp_server  mcp.json  package-lock.json  package.json  pfaa.config.json  pyproject.toml  railway.json  railway.toml  render.yaml  requirements.txt  setup.py  start.sh  tsconfig.json
.claude/: settings.json
.claude/agents/: aussie-architect.md  aussie-deployer.md  aussie-docs.md  aussie-planner.md  aussie-researcher.md  aussie-security.md  aussie-tdd.md  pfaa-lead.md  pfaa-rewriter.md  pfaa-validator.md
.claude/hooks/: banner.cjs  console-log-check.cjs  cortex.py  cortex_dashboard.py  jmem-client.cjs  jmem-client.py  jmem_recall.py  jmem_store_episode.py  py315-check.cjs  secret-cache.cjs  statusline.cjs  stop_scan.cjs  typecheck.cjs
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  (+4 more)
agents/: AGENTS.md  agent_benchmark.py  arena_benchmark.py  claude_agents.py  comprehensive_benchmark.py  framework_comparison.py  pfaa_runner.py  stress_benchmark.py
asian_racing/: README.md  __init__.py  pyproject.toml  requirements.txt
asian_racing/features/: feature_registry.json
asian_racing/prompts/: backtester.md  cycle_kickoff.md  data_steward.md  enhancer.md  feature_engineer.md  modeller.md  orchestrator.md  reviewer.md
asian_racing/reports/: pnl_2026-04-12.md  predictions_2026-04-12.md  predictions_2026-04-15_preliminary.md
asian_racing/schema/: races.sql  runners.sql
asian_racing/schema/migrations/: 001_initial.sql
asian_racing/src/: __init__.py  api_runner.py  backtester.py  data_steward.py  features.py  modeller.py  orchestrator.py  reviewer.py
asian_racing/state/: hypotheses.md  manifest.json
asian_racing/tests/: test_backtester.py  test_modeller.py  test_no_lookahead.py
benchmark_output/: arena.txt  capability.txt  comprehensive.txt  core.txt  framework_comparison.txt  stress.txt
docs/: CODEBASE_REVIEW_AND_UPDATES.md
freqtrade_strategy/: OPTIMIZATION_NOTES.md  __init__.py  backtest_sandbox.py  config_btc.json  config_btc_optimized.json  hyperopt_optimizer.py  multi_coin_backtest.py  optimal_params_v8.json  optimal_params_v9.json  optimal_weights_v8.json  optimizer.py  pfaa_btc_strategy.py
jmem-mcp-server/: README.md  pyproject.toml
jmem-mcp-server/jmem/: __init__.py  __main__.py  _stubs.py  daemon.py  engine.py  server.py  vector_store.py
pfaa-cli/: README.md  package-lock.json  package.json  pfaa_bridge.py  tsconfig.json
scripts/: check_circular_imports.py
tests/: conftest.py  test_cortex.py  test_daemon.py  test_jmem.py  test_jmem_engine.py  test_jmem_persistence.py  test_phase.py  test_swarm.py  test_tools_compute.py  test_vector_store.py
(+189 files in other folders)
