[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "asian-racing-prediction"
version = "0.1.0"
description = "Asian thoroughbred racing prediction with Claude Opus 4.6 agent team"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "lightgbm>=4.0",
    "optuna>=3.5",
    "scipy>=1.11",
    "anthropic>=0.40",
]

[project.optional-dependencies]
test = ["pytest>=7.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
